# calculator-with-Cursor-Composer

./: README.md  pyproject.toml
src/calculator/: calculator.py  main.py
